我的举报模块修改

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/.idea/
+/lenosp.iml
+/len-web/len-web.iml
+/len-sys/len-sys.iml
+/len-core/len-core.iml
+/len-blog/len-blog.iml
+/len-activiti/len-activiti.iml
